Fixed mobile responsiveness and z-index for both mobile and web headers

--- a/src/components/mobile-header/MobileHeader.css
+++ b/src/components/mobile-header/MobileHeader.css
@@ -4,7 +4,7 @@
     width: 100%;
     background-color: #ffffff;
     box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.2);
-
+    z-index: 1;
     position: fixed;
     top: 0;
     left: 0;
